<resources>
    <string name="app_name" translatable="false">Connect</string>
    <string name="no_items">No items to be shown</string>
    <string name="username_password_changed">Your username or password has been changed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="has_no_account">I don\'t have an account</string>
    <string name="has_account">I already have an account</string>
    <string name="title_activity_users">Users</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="error_occurred">An error occurred</string>
    <string name="loading">Loading…</string>
    <string name="icon">icon</string>
    <string name="title_activity_home">Visitors</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="username_numbers_letters">Username must contain only lowercase letters and numbers</string>
    <string name="history">History</string>
    <string name="manage_users">Manage Users</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="phone">Phone</string>
    <string name="observations">Observations</string>
    <string name="visitor_added">Visitor saved</string>
    <string name="title_activity_create_visitor">Create Visitor</string>
    <string name="age">Age</string>
    <string name="years">years old</string>
    <string name="no_visitors">Seems that you haven\'t any new visitors</string>
    <string name="no_activities">No activities done</string>
    <string name="is_connected">Connected!</string>
    <string name="is_not_connected">He is not connected :(</string>
    <string name="add_activity">Add activity</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="settings">Settings</string>
    <string name="my_visitors">My Visitors</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="observe">Observe</string>
    <string name="title_activity_my_visitors">My visitors</string>
    <string name="observers">Observers</string>
    <string name="no_observers">Nobody is observing</string>
    <string name="connected_visitors">Connected</string>
    <string name="user_added">User added</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="username_must_fill">Username must fill</string>
    <string name="password_must_fill">Must fill password</string>
    <string name="password_must_match">Password must match</string>
    <string name="save">Save</string>
    <string name="name_must_fill">Must fill name</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="empty">There is nothing here</string>
    <string name="title_activity_connected">Connected</string>
    <string name="search_bar">Search here</string>
    <string name="search_results">Results</string>
    <string name="added_in">Added in</string>
    <string name="date_format">MM/dd/yy</string>
</resources>
