<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.danielspeixoto.connect.view.activity.SignUpActivity"
            tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/passEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/confirmPassEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="16dp"/>

    </LinearLayout>


</ScrollView>
