<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorBackgroundFloating"
        android:text="@string/has_no_account"/>

    <Button
        android:id="@+id/haveAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorBackgroundFloating"
        android:text="@string/has_account"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/haveAccountButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/icon"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher"/>
</RelativeLayout>